Created profile picture img

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <header>
-    <img id="profile_pic" title="Piture of José Eduardo Paes de Macedo" src="../img/Perfil_150pxX150px.png"
+    <img id="profile_pic" title="Piture of José Eduardo Paes de Macedo" src="./img/Perfil_150pxX150px.png"
       alt="Piture of José Eduardo Paes de Macedo">
   </header>
   <main>
